--- a/css/johnson/_base.scss
+++ b/css/johnson/_base.scss
@@ -27,6 +27,9 @@ h1, h2, h3, h4, h5, h6,
 		margin-top: 0;
 	}
 }
+h2.block-title {
+	margin-bottom: 1em;
+}
 
 // Typography
 // -------------------------
