--- a/css/style.css
+++ b/css/style.css
@@ -6912,6 +6912,9 @@ h1, h2, h3, h4, h5, h6,
 .main-text h2:first-child {
   margin-top: 0; }
 
+h2.block-title {
+  margin-bottom: 1em; }
+
 p, li {
   font-size: 18px; }
 
