--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -49,7 +49,8 @@
 		max-width: 100%;
 		height: auto;
 	}
-	img.pull-left {
+	img.pull-left,
+	.pull-left {
 		margin: 0 1em 1em 0;
 	}
 	a {
@@ -67,6 +68,9 @@
 		font-size: 16px;
 		text-transform: uppercase;
 		margin: 0 0 1em;
+	}
+	h4 {
+		font-size: 22px;
 	}
 }
 
