make books search style more global

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -74,6 +74,22 @@
 	}
 }
 
+// BOOKS AND JOURNALS SEARCH 
+// -----------------------------
+
+
+// Books and Journals
+.single-search {
+	.form-group {
+		width: 75%;
+		float: left;
+		margin-right: .25em;
+	}
+	.btn-jgsm {
+		font-size: 14px !important;
+	}
+}
+
 // MEDIA QUERIES
 // -------------------------
 
