make books search style more global

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -85,6 +85,10 @@
 		float: left;
 		margin-right: .25em;
 	}
+	.form-control {
+		width: 100%;
+		margin-bottom: 2em;
+	}
 	.btn-jgsm {
 		font-size: 14px !important;
 	}
