format topics on database node

--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -43,6 +43,10 @@
 		background: $cornell-primary;
 		color: white;
 	}
+	.field-item {
+		display: inline;
+		margin-right: 5px;
+	}
 }
 
 // SimpleSAML login
