--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -44,8 +44,8 @@
 		color: white;
 	}
 	.field-item {
-		display: inline;
-		margin-right: 5px;
+		display: inline-block;
+		margin: 0 5px 10px 0;
 	}
 }
 
