--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -25,6 +25,7 @@
 
 // add label styles to topic tag on node template
 .topic-list {
+	margin-bottom: 1em;
 	a {
 		color: $dark-gray;
 		display: inline;
