--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -23,9 +23,11 @@
 	color: white;
 }
 
+// DATABASE NODE TEMPLATE
+// -----------------------------------
+
 // add label styles to topic tag on node template
 .topic-list {
-	margin-bottom: 1em;
 	a {
 		color: $dark-gray;
 		display: inline;
@@ -48,6 +50,9 @@
 		display: inline-block;
 		margin: 0 5px 10px 0;
 	}
+}
+.db-field {
+	margin-bottom: 1em;
 }
 
 // SimpleSAML login
