--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -54,6 +54,11 @@
 .db-field {
 	margin-bottom: 1em;
 }
+.db-availability {
+	.field-items {
+		font-size: 18px;
+	}
+}
 
 // SimpleSAML login
 // -------------------------
