format db connect button

--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -60,7 +60,7 @@
 	}
 }
 // Give the Connect button the same styling as .btn-jgsm
-.db-connect {
+.db-url {
 	a {
 		background: $johnson-red;
 		color: white;
