--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -69,6 +69,8 @@
 		text-align: center;
 		vertical-align: middle;
 		padding: 6px 12px;
+		text-transform: capitalize;
+		font-size: 18px;
 	}
 	a:hover {
 		background: black;
