--- a/css/style.css
+++ b/css/style.css
@@ -7584,7 +7584,9 @@ body.admin-menu {
   font-weight: normal;
   text-align: center;
   vertical-align: middle;
-  padding: 6px 12px; }
+  padding: 6px 12px;
+  text-transform: capitalize;
+  font-size: 18px; }
 .db-url a:hover {
   background: black;
   color: white; }
