swap in johnson school logo

--- a/css/style.css
+++ b/css/style.css
@@ -6867,9 +6867,9 @@ button.close {
 
 .cu-logo {
   display: block;
-  background: url("../img/layout/Johnson_Cornell.simple.color.on.wht.gif") no-repeat 0 0;
-  width: 169px;
-  height: 45px; }
+  background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
+  width: 228px;
+  height: 73px; }
   .cu-logo a {
     display: block;
     border: none;
