--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -13,9 +13,9 @@
 }
 .cu-logo {
 	display: block;
-	background: url("../img/layout/Johnson_Cornell.simple.color.on.wht.gif") no-repeat 0 0;
-	width: 169px;
-	height: 45px;
+	background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
+	width: 228px;
+	height: 73px;
 	a {
 		display: block;
 		border: none;
