add unit and cornell links

--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -28,7 +28,7 @@
 		height: 72px;
 	}
 	img { display: none; }
-	#unit-signature-links { float: left; }
+	.unit-signature-links { float: left; }
 	a#cornell-link {
 		left: 68px;
 		height: 35px;
