--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -31,11 +31,12 @@
 	.unit-signature-links { float: left; }
 	a#cornell-link {
 		left: 68px;
-		height: 35px;
+		height: 20px;
 	}
 	a#unit-link {
 		top: 38px;
-		height: 37px;
+		height: 45px;
+		width: 155px;
 	}
 }
 .search-box {
