--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -14,8 +14,8 @@
 .cu-logo {
 	display: block;
 	background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
-	width: 228px;
-	height: 73px;
+	width: 143px;
+	height: 45px;
 	a {
 		display: block;
 		border: none;
@@ -76,3 +76,31 @@
 // 	a:hover { background: $ice-blue; }
 // }
 
+// MEDIA QUERIES
+// -------------------------
+
+	// /* Extra small devices (phones, up to 480px) */
+	// /* No media query since this is the default in Bootstrap */
+
+	// /* Small devices (tablets, 768px and up) */
+	// @media (min-width: @screen-sm) { ... }
+
+	// /* Medium devices (desktops, 992px and up) */
+	// @media (min-width: @screen-md) { ... }
+
+	// /* Large devices (large desktops, 1200px and up) */
+	// @media (min-width: @screen-lg) { ... }
+
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: $screen-sm) {
+	.cu-logo {
+		width: 228px;
+		height: 73px;
+	}
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: $screen-md) {
+
+}
