--- a/css/style.css
+++ b/css/style.css
@@ -6868,8 +6868,8 @@ button.close {
 .cu-logo {
   display: block;
   background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
-  width: 228px;
-  height: 73px; }
+  width: 143px;
+  height: 45px; }
   .cu-logo a {
     display: block;
     border: none;
@@ -6905,6 +6905,12 @@ button.close {
 .header-search form {
   float: right; }
 
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .cu-logo {
+    width: 228px;
+    height: 73px; } }
+/* Medium devices (desktops, 992px and up) */
 body {
   font-family: "pf_dintext_proregular", arial, san-serif;
   background: #ececed; }
