--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -95,6 +95,7 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: $screen-sm) {
 	.cu-logo {
+		background: url("../img/layout/johnson-cornell-sm.gif") no-repeat 0 0;
 		width: 228px;
 		height: 73px;
 	}
