--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -28,7 +28,10 @@
 		height: 72px;
 	}
 	img { display: none; }
-	.unit-signature-links { float: left; }
+	.unit-signature-links { 
+		float: left;
+		display: none;
+	}
 	a#cornell-link {
 		left: 68px;
 		height: 20px;
@@ -98,6 +101,9 @@
 		background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
 		width: 228px;
 		height: 73px;
+		.unit-signature-links {
+			display: block;
+		}
 	}
 }
 
