--- a/css/style.css
+++ b/css/style.css
@@ -6882,7 +6882,8 @@ button.close {
   .cu-logo img {
     display: none; }
   .cu-logo .unit-signature-links {
-    float: left; }
+    float: left;
+    display: none; }
   .cu-logo a#cornell-link {
     left: 68px;
     height: 20px; }
@@ -6910,7 +6911,9 @@ button.close {
   .cu-logo {
     background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
     width: 228px;
-    height: 73px; } }
+    height: 73px; }
+    .cu-logo .unit-signature-links {
+      display: block; } }
 /* Medium devices (desktops, 992px and up) */
 body {
   font-family: "pf_dintext_proregular", arial, san-serif;
