--- a/css/style.css
+++ b/css/style.css
@@ -6878,7 +6878,8 @@ button.close {
   .cu-logo a#insignia-link {
     float: left;
     width: 72px;
-    height: 72px; }
+    height: 72px;
+    display: none; }
   .cu-logo img {
     display: none; }
   .cu-logo .unit-signature-links {
@@ -6912,7 +6913,8 @@ button.close {
     background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
     width: 228px;
     height: 73px; }
-    .cu-logo .unit-signature-links {
+    .cu-logo .unit-signature-links,
+    .cu-logo a#insignia-link {
       display: block; } }
 /* Medium devices (desktops, 992px and up) */
 body {
