--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -4,26 +4,25 @@
 .navbar-brand, .navbar-brand:hover {
 	font-size: 29px;
 	text-transform: uppercase;
-	margin: 0 0 .25em 0;
+	margin: 1em 0 .25em 0;
 	float: none;
 	display: block;
 	text-decoration: none;
 	color: black;
 	padding: .25em 0;
 }
-.college-brand {
-	margin: 1em 0 0 0;
-	font-size: 22px;
-	font-weight: 400;
-	text-transform: uppercase;
-	color: black;
-	display: block;
-}
+// .college-brand {
+// 	margin: 1em 0 0 0;
+// 	font-size: 22px;
+// 	font-weight: 400;
+// 	text-transform: uppercase;
+// 	color: black;
+// 	display: block;
+// }
 .college-brand:hover {
 	color: black;
 	text-decoration: none;
 }
-
 .navbar {
 	.nav {
 		margin-top: 2.75em;
