--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -46,7 +46,7 @@
 		float: right;
 		border: 0;
 		border-radius: 0;
-		margin-top: .5em;
+		margin-top: 1.5em;
 		i {
 			color: $cornell-primary;
 			font-size: 18px;
