--- a/css/style.css
+++ b/css/style.css
@@ -6895,7 +6895,7 @@ button.close {
   float: right;
   border: 0;
   border-radius: 0;
-  margin-top: .5em; }
+  margin-top: 1.5em; }
   .search-box .btn i {
     color: #b31b1b;
     font-size: 18px; }
