position of search button

--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -46,7 +46,7 @@
 		float: right;
 		border: 0;
 		border-radius: 0;
-		margin-top: 1.5em;
+		margin-top: .3em;
 		i {
 			color: $cornell-primary;
 			font-size: 18px;
@@ -77,3 +77,35 @@
 // 	  	padding: 5px 15px; }
 // 	a:hover { background: $ice-blue; }
 // }
+
+
+// MEDIA QUERIES
+// -------------------------
+
+	// /* Extra small devices (phones, up to 480px) */
+	// /* No media query since this is the default in Bootstrap */
+
+	// /* Small devices (tablets, 768px and up) */
+	// @media (min-width: @screen-sm) { ... }
+
+	// /* Medium devices (desktops, 992px and up) */
+	// @media (min-width: @screen-md) { ... }
+
+	// /* Large devices (large desktops, 1200px and up) */
+	// @media (min-width: @screen-lg) { ... }
+
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: $screen-sm) {
+	.search-box {
+		.btn {
+			margin-top: 1.5em;
+		}
+	}
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: $screen-md) {
+
+}
+
