--- a/css/style.css
+++ b/css/style.css
@@ -6895,7 +6895,7 @@ button.close {
   float: right;
   border: 0;
   border-radius: 0;
-  margin-top: 1.5em; }
+  margin-top: .3em; }
   .search-box .btn i {
     color: #b31b1b;
     font-size: 18px; }
@@ -6905,6 +6905,11 @@ button.close {
 .header-search form {
   float: right; }
 
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .search-box .btn {
+    margin-top: 1.5em; } }
+/* Medium devices (desktops, 992px and up) */
 body {
   font-family: "pf_dintext_proregular", arial, san-serif;
   background: #ececed; }
