format search results page

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -94,6 +94,16 @@
 	}
 }
 
+// SITE SEARCH
+// -------------------------
+.page-search {
+	.main-text {
+		.search-form {
+			width: 50%;
+		}
+	}
+}
+
 // MEDIA QUERIES
 // -------------------------
 
