--- a/css/style.css
+++ b/css/style.css
@@ -7323,6 +7323,8 @@ footer {
 
 .page-search .main-text .search-form {
   width: 100%; }
+.page-search .search-info {
+  display: none; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
