--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -23,6 +23,13 @@
 	color: white;
 }
 
+// DATABASES PAGE
+// -----------------------------------
+.page-db-popular,
+.page-db-search {
+	margin-bottom: 1.5em;
+}
+
 // DATABASE NODE TEMPLATE
 // -----------------------------------
 
