format databases page

--- a/css/johnson/_variables.scss
+++ b/css/johnson/_variables.scss
@@ -19,9 +19,9 @@ $dark-gray: #333;
 $charcoal-gray: #686868;
 $medium-gray: #999;
 $light-gray: #ececed;
-$ice-blue: #05b7c7;
-$light-ice-blue: #abe4e9;
-$dark-ice-blue: #049dab;
+// $ice-blue: #05b7c7;
+// $light-ice-blue: #abe4e9;
+// $dark-ice-blue: #049dab;
 
 $pale-tan: #efede9;
 $tan: #cbc3b7;
