--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -27,8 +27,10 @@
 // -----------------------------------
 .page-db-popular,
 .page-db-search {
-	margin-bottom: 1.5em;
+	margin-bottom: 2em;
+	border-bottom: 1px solid $light-gray;
 }
+
 
 // DATABASE NODE TEMPLATE
 // -----------------------------------
