format databases page

--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -29,6 +29,12 @@
 .page-db-search {
 	margin-bottom: 2em;
 	border-bottom: 1px solid $light-gray;
+	padding-bottom: 1.5em;
+}
+.page-node-258 {
+	h2 {
+		font-size: 24px;
+	}
 }
 
 
