--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -36,6 +36,23 @@
 		font-size: 24px;
 	}
 }
+ul.item-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	li {
+		font-size: 18px;
+		margin: 0 0 .5em;
+	}
+	a {
+		color: $dark-gray;
+		i {
+			font-size: 75%;
+			margin-left: .5em;
+			color: $johnson-red;
+		}
+	}
+}
 
 
 // DATABASE NODE TEMPLATE
