--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -113,6 +113,9 @@
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
 	background: $johnson-red;
 }
+.nav-pills > li > a {
+	border-radius: 0;
+}
 
 
 
