format databases page

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -126,6 +126,7 @@
 	.ui-accordion-header {
 		border-radius: 0 !important;
 		background-image: none;
+		font-family: $font-family-sans-serif;
 	}
 }
 
