format databases page

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -129,6 +129,13 @@
 		background-image: none;
 	}
 }
+.ui-widget-content {
+	a {
+		color: $johnson-red;
+		display: inline-block;
+		margin: 0 0 .25em;
+	}
+}
 
 
 
