format databases page

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -128,6 +128,9 @@
 		border-radius: 0 !important;
 		background-image: none;
 	}
+	.ui-accordion-content {
+		height: auto !important;
+	}
 }
 .ui-widget-content {
 	a {
