format databases page

--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -55,6 +55,14 @@
 		}
 	}
 }
+.database-item {
+	margin: 0 0 1.5em 0;
+	padding: 0 0 1em;
+	border-bottom: 1px solid $light-gray;
+	h2 {
+		font-size: 18px;
+	}
+}
 
 
 
