--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -46,7 +46,7 @@
 			margin: 0 0 .5em;
 		}
 		a {
-			color: $dark-gray;
+			// color: $dark-gray;
 			i {
 				font-size: 75%;
 				margin-left: .5em;
@@ -56,12 +56,8 @@
 	}
 }
 .database-item {
-	margin: 0 0 1.5em 0;
-	padding: 0 0 1em;
+	padding: 1.5em 0;
 	border-bottom: 1px solid $light-gray;
-	h2 {
-		font-size: 18px;
-	}
 }
 
 
