--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -62,9 +62,10 @@
 .db-label {
 	font-weight: bold;
 }
+.db-topics,
 .db-description,
 .db-availability {
-	margin-bottom: 1em;
+	margin-bottom: .5em;
 }
 
 
