--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -67,6 +67,11 @@
 .db-availability {
 	margin-bottom: .5em;
 }
+.db-topics {
+	.label-topic {
+		color: $dark-gray;
+	}
+}
 
 
 // DATABASE NODE TEMPLATE
