--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -73,7 +73,12 @@
 		font-size: 14px;
 	}
 }
-
+// page search box width
+.page-db-search {
+	#db_search {
+		width: 90%;
+	}
+}
 
 // DATABASE NODE TEMPLATE
 // -----------------------------------
@@ -154,4 +159,34 @@
 	.label-topic {
 		color: $dark-gray;
 	}
+}
+
+// MEDIA QUERIES
+// -------------------------
+
+	// /* Extra small devices (phones, up to 480px) */
+	// /* No media query since this is the default in Bootstrap */
+
+	// /* Small devices (tablets, 768px and up) */
+	// @media (min-width: @screen-sm) { ... }
+
+	// /* Medium devices (desktops, 992px and up) */
+	// @media (min-width: @screen-md) { ... }
+
+	// /* Large devices (large desktops, 1200px and up) */
+	// @media (min-width: @screen-lg) { ... }
+
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: $screen-sm) {
+	.page-db-search {
+		#db_search {
+			width: 40%;
+		}
+	}
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: $screen-md) {
+
 }
