--- a/css/style.css
+++ b/css/style.css
@@ -7617,7 +7617,39 @@ body.admin-menu {
     font-size: 14px; }
 
 .page-db-search #db_search {
-  width: 75%; }
+  width: 75%;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857;
+  color: #555555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
+  .page-db-search #db_search:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
+  .page-db-search #db_search::-moz-placeholder {
+    color: #777777;
+    opacity: 1; }
+  .page-db-search #db_search:-ms-input-placeholder {
+    color: #777777; }
+  .page-db-search #db_search::-webkit-input-placeholder {
+    color: #777777; }
+  .page-db-search #db_search[disabled], .page-db-search #db_search[readonly], fieldset[disabled] .page-db-search #db_search {
+    cursor: not-allowed;
+    background-color: #eeeeee;
+    opacity: 1; }
 
 .topic-list a {
   color: #333;
