--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -78,8 +78,7 @@
 	#db_search {
 			width: 75%;
 			//force bootstrap style on db search box
-			display: block;
-		  	width: 100%;
+			display: inline-block;
 		  	height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
 		  	padding: $padding-base-vertical $padding-base-horizontal;
 		  	font-size: $font-size-base;
