--- a/css/style.css
+++ b/css/style.css
@@ -7618,8 +7618,7 @@ body.admin-menu {
 
 .page-db-search #db_search {
   width: 75%;
-  display: block;
-  width: 100%;
+  display: inline-block;
   height: 34px;
   padding: 6px 12px;
   font-size: 14px;
