--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -74,7 +74,8 @@
 	}
 }
 // page search box width
-.page-db-search {
+.page-db-search,
+.resource-content {
 	#db_search {
 			width: 75%;
 			//force bootstrap style on db search box
