--- a/css/style.css
+++ b/css/style.css
@@ -7616,7 +7616,8 @@ body.admin-menu {
     color: #333;
     font-size: 14px; }
 
-.page-db-search #db_search {
+.page-db-search #db_search,
+.resource-content #db_search {
   width: 75%;
   display: inline-block;
   height: 34px;
@@ -7633,19 +7634,26 @@ body.admin-menu {
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
-  .page-db-search #db_search:focus {
+  .page-db-search #db_search:focus,
+  .resource-content #db_search:focus {
     border-color: #66afe9;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
-  .page-db-search #db_search::-moz-placeholder {
+  .page-db-search #db_search::-moz-placeholder,
+  .resource-content #db_search::-moz-placeholder {
     color: #777777;
     opacity: 1; }
-  .page-db-search #db_search:-ms-input-placeholder {
+  .page-db-search #db_search:-ms-input-placeholder,
+  .resource-content #db_search:-ms-input-placeholder {
     color: #777777; }
-  .page-db-search #db_search::-webkit-input-placeholder {
+  .page-db-search #db_search::-webkit-input-placeholder,
+  .resource-content #db_search::-webkit-input-placeholder {
     color: #777777; }
-  .page-db-search #db_search[disabled], .page-db-search #db_search[readonly], fieldset[disabled] .page-db-search #db_search {
+  .page-db-search #db_search[disabled], .page-db-search #db_search[readonly], fieldset[disabled] .page-db-search #db_search,
+  .resource-content #db_search[disabled],
+  .resource-content #db_search[readonly], fieldset[disabled]
+  .resource-content #db_search {
     cursor: not-allowed;
     background-color: #eeeeee;
     opacity: 1; }
