--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -74,8 +74,7 @@
 	}
 }
 // page search box width
-.page-db-search,
-.resource-content {
+.page-db-search {
 	#db_search {
 			width: 75%;
 			//force bootstrap style on db search box
