--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -19,9 +19,15 @@
 // 	color: black;
 // 	display: block;
 // }
-.college-brand:hover {
-	color: black;
-	text-decoration: none;
+// .college-brand:hover {
+// 	color: black;
+// 	text-decoration: none;
+// }
+.slogan {
+	color: white;
+	font-size: 16px;
+	font-style: italic;
+	margin-left: 2em;
 }
 .navbar {
 	.nav {
