--- a/css/style.css
+++ b/css/style.css
@@ -7154,9 +7154,11 @@ footer {
   color: black;
   padding: .25em 0; }
 
-.college-brand:hover {
-  color: black;
-  text-decoration: none; }
+.slogan {
+  color: white;
+  font-size: 16px;
+  font-style: italic;
+  margin-left: 2em; }
 
 .navbar .nav {
   margin-top: 2.75em; }
