--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -28,7 +28,8 @@
 	color: white;
 	font-size: 18px;
 	font-style: italic;
-	margin-left: 5em;
+	margin-right: 4em;
+	text-align: right;
 	text-shadow: 2px 2px 0px #3f3f3f;
 }
 .navbar {
