--- a/css/style.css
+++ b/css/style.css
@@ -7159,7 +7159,8 @@ footer {
   color: white;
   font-size: 18px;
   font-style: italic;
-  margin-left: 5em;
+  margin-right: 4em;
+  text-alig: right;
   text-shadow: 2px 2px 0px #3f3f3f; }
 
 .navbar .nav {
