--- a/css/style.css
+++ b/css/style.css
@@ -7160,7 +7160,7 @@ footer {
   font-size: 18px;
   font-style: italic;
   margin-right: 4em;
-  text-alig: right;
+  text-align: right;
   text-shadow: 2px 2px 0px #3f3f3f; }
 
 .navbar .nav {
