--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -152,18 +152,22 @@
 		color: white;
 		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
 		font-size: 36px;
+		margin-bottom: 0;
 	}
-	.college-brand {
-		color: white;
-		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
-		margin-top: 2em;
-	}
-	.college-brand:hover {
-		color: white;
-		text-decoration: none;
-	}
+	// .college-brand {
+	// 	color: white;
+	// 	text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
+	// 	margin-top: 2em;
+	// }
+	// .college-brand:hover {
+	// 	color: white;
+	// 	text-decoration: none;
+	// }
 	.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
 		margin-left: 0;
+	}
+	.slogan {
+		margin-right: 5px;
 	}
 }
 
