--- a/css/style.css
+++ b/css/style.css
@@ -7235,19 +7235,14 @@ footer {
   .navbar-brand:hover {
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f;
-    font-size: 36px; }
-
-  .college-brand {
-    color: white;
-    text-shadow: 2px 2px 0px #3f3f3f;
-    margin-top: 2em; }
-
-  .college-brand:hover {
-    color: white;
-    text-decoration: none; }
+    font-size: 36px;
+    margin-bottom: 0; }
 
   .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
-    margin-left: 0; } }
+    margin-left: 0; }
+
+  .slogan {
+    margin-right: 5px; } }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 1200px) {
   .navbar-brand,
