--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -151,7 +151,7 @@
 	.navbar-brand:hover {
 		color: white;
 		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
-		font-size: 36px;
+		font-size: 34px;
 		margin-bottom: 0;
 	}
 	// .college-brand {
@@ -167,7 +167,7 @@
 		margin-left: 0;
 	}
 	.slogan {
-		margin-right: 5px;
+		margin-right: 5em;
 	}
 }
 
