--- a/css/style.css
+++ b/css/style.css
@@ -7160,7 +7160,6 @@ footer {
   font-size: 18px;
   font-style: italic;
   margin-right: 4em;
-  text-align: right;
   text-shadow: 2px 2px 0px #3f3f3f; }
 
 .navbar .nav {
@@ -7242,7 +7241,8 @@ footer {
     margin-left: 0; }
 
   .slogan {
-    margin-right: 5em; } }
+    margin-right: 5em;
+    text-align: right; } }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 1200px) {
   .navbar-brand,
