--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -25,7 +25,7 @@
 // 	text-decoration: none;
 // }
 .slogan {
-	color: white;
+	color: $dark-gray;
 	font-size: 18px;
 	font-style: italic;
 	margin-right: 4em;
@@ -168,6 +168,8 @@
 	.slogan {
 		margin-right: 5em;
 		text-align: right;
+		color: white;
+		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
 	}
 }
 
