--- a/css/style.css
+++ b/css/style.css
@@ -7159,8 +7159,7 @@ footer {
   color: #333;
   font-size: 18px;
   font-style: italic;
-  margin-right: 4em;
-  text-shadow: 2px 2px 0px #3f3f3f; }
+  margin-right: 4em; }
 
 .navbar .nav {
   margin-top: 2.75em; }
