format db search results

--- a/css/style.css
+++ b/css/style.css
@@ -7607,9 +7607,8 @@ body.admin-menu {
   border-bottom: 1px solid #ececed;
   padding-bottom: 1.5em; }
 
-.page-node-258 h2 {
+.item-list h2 {
   font-size: 24px; }
-
 .item-list ul {
   margin: 0;
   padding: 0;
